3 throttle and bulk service calls into consolidated requests (#4)
---------

Co-authored-by: Nikos Kougianos <nikolaos.kougianos@betvictor.com>